// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verification step for out of cluster delegate render ConnectorTestConnection for AWS 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-grey800"
      >
        connectors.stepThreeName
      </p>
      <div
        class="StyledProps--font StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 100%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    error
                  </desc>
                  <path
                    d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main StepsProgress--stepLabelContainer"
                style=""
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    connectors.testConnectionStep.validationText.aws
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                  >
                    connectors.testConnectionStep.placeholderError
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render ConnectorTestConnection for Artifactory 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-grey800"
      >
        connectors.stepThreeName
      </p>
      <div
        class="StyledProps--font StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 100%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    error
                  </desc>
                  <path
                    d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main StepsProgress--stepLabelContainer"
                style=""
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    connectors.testConnectionStep.validationText.artifactory
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                  >
                    connectors.testConnectionStep.placeholderError
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render ConnectorTestConnection for Docker 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-grey800"
        data-tooltip-id="platform.connectors.connectorConnectionTest"
      >
        platform.connectors.stepThreeName
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 100%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    error
                  </desc>
                  <path
                    d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main StepsProgress--stepLabelContainer"
                style=""
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    platform.connectors.testConnectionStep.validationText.docker
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                  >
                    platform.connectors.testConnectionStep.placeholderError
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main delegateTaskLogsButton"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <a
                aria-label="common.noDelegateLogs"
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
                disabled=""
                role="button"
                style="width: 210px;"
                tabindex="-1"
              >
                <span
                  class="bp3-button-text"
                >
                  common.viewText
                   
                  common.logs.delegateTaskLogs
                </span>
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        aria-label="back"
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
        data-name="connectionTestBackButton"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
          icon="chevron-left"
        >
          <svg
            data-icon="chevron-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-left
            </desc>
            <path
              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          back
        </span>
      </button>
      <button
        aria-label="continue"
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render ConnectorTestConnection for GCP 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-grey800"
      >
        connectors.stepThreeName
      </p>
      <div
        class="StyledProps--font StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 100%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    error
                  </desc>
                  <path
                    d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main StepsProgress--stepLabelContainer"
                style=""
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    connectors.testConnectionStep.validationText.gcp
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                  >
                    connectors.testConnectionStep.placeholderError
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render ConnectorTestConnection for Git 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-grey800"
        data-tooltip-id="platform.connectors.connectorConnectionTest"
      >
        platform.connectors.stepThreeName
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 100%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    error
                  </desc>
                  <path
                    d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main StepsProgress--stepLabelContainer"
                style=""
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    platform.connectors.testConnectionStep.validationText.github
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                  >
                    platform.connectors.testConnectionStep.placeholderError
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main delegateTaskLogsButton"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <a
                aria-label="common.noDelegateLogs"
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
                disabled=""
                role="button"
                style="width: 210px;"
                tabindex="-1"
              >
                <span
                  class="bp3-button-text"
                >
                  common.viewText
                   
                  common.logs.delegateTaskLogs
                </span>
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        aria-label="back"
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
        data-name="connectionTestBackButton"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
          icon="chevron-left"
        >
          <svg
            data-icon="chevron-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-left
            </desc>
            <path
              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          back
        </span>
      </button>
      <button
        aria-label="continue"
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render ConnectorTestConnection for K8s and last step 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-grey800"
        data-tooltip-id="platform.connectors.connectorConnectionTest"
      >
        platform.connectors.stepThreeName
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 100%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    error
                  </desc>
                  <path
                    d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main StepsProgress--stepLabelContainer"
                style=""
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                  >
                    platform.connectors.testConnectionStep.placeholderError
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main delegateTaskLogsButton"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <a
                aria-label="common.noDelegateLogs"
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
                disabled=""
                role="button"
                style="width: 210px;"
                tabindex="-1"
              >
                <span
                  class="bp3-button-text"
                >
                  common.viewText
                   
                  common.logs.delegateTaskLogs
                </span>
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        aria-label="back"
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
        data-name="connectionTestBackButton"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
          icon="chevron-left"
        >
          <svg
            data-icon="chevron-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-left
            </desc>
            <path
              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          back
        </span>
      </button>
      <button
        aria-label="continue"
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render ConnectorTestConnection for K8s in edit screen 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-grey800"
        data-tooltip-id="platform.connectors.connectorConnectionTest"
      >
        platform.connectors.stepThreeName
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main content StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 100%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    error
                  </desc>
                  <path
                    d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main StepsProgress--stepLabelContainer"
                style=""
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                  >
                    platform.connectors.testConnectionStep.placeholderError
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main delegateTaskLogsButton"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <a
                aria-label="common.noDelegateLogs"
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
                disabled=""
                role="button"
                style="width: 210px;"
                tabindex="-1"
              >
                <span
                  class="bp3-button-text"
                >
                  common.viewText
                   
                  common.logs.delegateTaskLogs
                </span>
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Verification step for out of cluster delegate render ConnectorTestConnection for Nexus 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--color StyledProps--color-grey800"
        data-tooltip-id="platform.connectors.connectorConnectionTest"
      >
        platform.connectors.stepThreeName
      </p>
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main content contentMinHeight StyledProps--padding-top-xxlarge"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
          id="steps-progress"
        >
          <div
            class="StepsProgress--progressBar"
          >
            <div
              class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
            >
              <div
                class="bp3-progress-meter"
                style="width: 100%;"
              />
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="StepsProgress--stepWrap"
            >
              <span
                class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    error
                  </desc>
                  <path
                    d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <div
                class="StyledProps--font StyledProps--main StepsProgress--stepLabelContainer"
                style=""
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 100%;"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600"
                  >
                    platform.connectors.testConnectionStep.validationText.nexus
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
                  >
                    platform.connectors.testConnectionStep.placeholderError
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main delegateTaskLogsButton"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <a
                aria-label="common.noDelegateLogs"
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-secondary Button--size Button--small"
                disabled=""
                role="button"
                style="width: 210px;"
                tabindex="-1"
              >
                <span
                  class="bp3-button-text"
                >
                  common.viewText
                   
                  common.logs.delegateTaskLogs
                </span>
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main btnWrapper"
    >
      <button
        aria-label="back"
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
        data-name="connectionTestBackButton"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
          icon="chevron-left"
        >
          <svg
            data-icon="chevron-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-left
            </desc>
            <path
              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          back
        </span>
      </button>
      <button
        aria-label="continue"
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          continue
        </span>
      </button>
    </div>
  </div>
</div>
`;
